tests/baselines/reference/unusedLocalsInMethod1.errors.txt
tests/cases/compiler/unusedLocalsInMethod1.ts(4,13): error TS6133: Variable 'x' has never been used.


==== tests/cases/compiler/unusedLocalsInMethod1.ts (1 errors) ====
    
    class greeter {
        public function1() {
            var x = 10;
                ~
!!! error TS6133: Variable 'x' has never been used.
        }
    }